# lazycc

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  template.rs
src/templates/: shell.zsh
src/tools/: claude.rs  codex.rs  mod.rs  registry.rs  runner.rs
src/tools/capabilities/: env.rs  mcp.rs  mod.rs  plugin.rs  shell.rs
src/tui/: cache.rs  layout.rs  mod.rs  runner.rs  state.rs  theme.rs  view.rs
tmp/: 1.md
