[package]
name = "lazycc"
version = "0.2.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.1.4"
crossterm = "0.28.1"
dirs = "6.0.0"
inquire = "0.7.5"
minijinja = "2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8.23"
